--- a/comp4537/labs/1/reader.html
+++ b/comp4537/labs/1/reader.html
@@ -2,16 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Reader</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Note Reader</title>
 </head>
 <body>
-    <h1>Reader</h1>
-    <div id="notes-container">
+    <h1>Note Reader</h1>
+    <div id="notes">
         <!-- Notes will be dynamically added here -->
     </div>
-    <p id="last-retrieved">Last retrieved: N/A</p>
-    <button id="back-button" onclick="window.location.href='index.html'">Back</button>
-    <script src="js/main.js"></script>
+    <p id="lastRetrieved">Last Retrieved: -</p>
+    <button id="backButton" onclick="location.href='index.html'">Back</button>
+
+    <script src="js/reader.js"></script>
 </body>
 </html>
