change page title

--- a/comp4537/labs/1/writer.html
+++ b/comp4537/labs/1/writer.html
@@ -7,7 +7,7 @@
     <title>Note Writer</title>
 </head>
 <body>
-    <h1>Note Writer</h1>
+    <h1>Write Notes</h1>
     <div id="notes">
         <!-- Notes will be dynamically added here -->
     </div>
